--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -2,7 +2,7 @@
 @import 'syntax-highlighting';
 
 $grey-color:       #828282;
-$theme-color: #ff6f00;
+$theme-color: #9f81cd;
 
 .icon {
 
@@ -43,7 +43,7 @@ main {
 }
 
 body {
-  background-color: #fff;
+  background-color: #fbd1d3;
   font-family: $font-sans;
   margin: 0;
   padding: 0;
