--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -78,9 +78,9 @@ body {
 
       a {
         text-decoration: none;
-        color: #999999;
+        color: #F198AF;
         &:hover {
-          color: #333333;
+          color: #766DC1;
         }
       }
   }
@@ -103,7 +103,7 @@ body {
     outline: 0;
     line-height: 50px;
     word-break: break-word;
-    color: #333333;
+    color: #766DC1;
   }
   .blog-description {
     font-size: 28px;
@@ -195,10 +195,10 @@ body {
   font-size: $rs / 4 * 3;
   color: #9EABB3;
   a {
-    color: #999999;
+    color: #F198AF;
     text-decoration: none;
     &:hover {
-      color: #333333;
+      color: #766DC1;
     }
   }
 }
@@ -210,13 +210,13 @@ body {
   max-width: 700px;
   font-size: $rs / 4 * 3;
   text-align: center;
-  color: #999999;
+  color: #F198AF;
   line-height: $rs * 1.1;
   a {
     color: #666666;
     text-decoration: none;
     &:hover {
-      color: #333333;
+      color: #766DC1;
     }
   }
 }
@@ -264,7 +264,7 @@ body {
   .post-content {
     width: 100%;
     font-family: $font-serif;
-    color: #333333;
+    color: #766DC1;
     h1, h2, h3 {
       font-family: $font-sans;
     }
@@ -306,13 +306,13 @@ body {
       letter-spacing: -.002em;
       margin-top: 30px;
       margin-bottom: 0;
-      color: #333333;
+      color: #766DC1;
       -webkit-hyphens: auto;
       -moz-hyphens: auto;
       hyphens: auto;
     }
     a {
-      color: #333333;
+      color: #766DC1;
       text-decoration: underline;
     }
     amp-img, amp-youtube {
@@ -412,7 +412,7 @@ body {
         color: black;
         text-decoration: none;
         &:hover {
-          color: #333333;
+          color: #766DC1;
           text-decoration: underline;
         }
       }
@@ -441,7 +441,7 @@ body {
         margin: 0;
         padding-left: 100px;
         &.published {
-          color: #999999;
+          color: #F198AF;
         }
       }
     }
@@ -459,13 +459,13 @@ body {
       .site-footer {
         margin: 0;
         padding: 0;
-        color: #333333;
+        color: #766DC1;
         text-align: left;
         font-size: 14px;
         line-height: 1.3;
-        color: #999999;
+        color: #F198AF;
         a {
-          color: #333333;
+          color: #766DC1;
           text-decoration: none;
           &:hover {
             text-decoration: underline;
@@ -475,7 +475,7 @@ body {
           display: block;
           padding-bottom: 18px;
           font-weight: 700;
-          color: #333333;
+          color: #766DC1;
         }
       }
     }
@@ -493,7 +493,7 @@ body {
       display: none;
     }
     &:hover {
-      color: #333333;
+      color: #766DC1;
     }
   }
 }
